--- a/project/TPES/package.json
+++ b/project/TPES/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^5.2.0",
     "@auth0/angular-jwt": "^1.0.0-beta.9",
     "core-js": "^2.4.1",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
